--- a/sass/grid/columns.sass
+++ b/sass/grid/columns.sass
@@ -26,6 +26,9 @@ $column-gap: 0.75rem !default
   .columns.is-mobile > &.is-one-quarter
     flex: none
     width: 25%
+  .columns.is-mobile > &.is-one-fifth
+    flex: none
+    width: 20%
   .columns.is-mobile > &.is-offset-three-quarters
     margin-left: 75%
   .columns.is-mobile > &.is-offset-two-thirds
@@ -36,6 +39,8 @@ $column-gap: 0.75rem !default
     margin-left: 33.3333%
   .columns.is-mobile > &.is-offset-one-quarter
     margin-left: 25%
+  .columns.is-mobile > &.is-offset-one-fifth
+    margin-left: 20%
   @for $i from 1 through 12
     .columns.is-mobile > &.is-#{$i}
       flex: none
@@ -63,6 +68,9 @@ $column-gap: 0.75rem !default
     &.is-one-quarter-mobile
       flex: none
       width: 25%
+    &.is-one-fifth-mobile
+      flex: none
+      width: 20%
     &.is-offset-three-quarters-mobile
       margin-left: 75%
     &.is-offset-two-thirds-mobile
@@ -73,6 +81,8 @@ $column-gap: 0.75rem !default
       margin-left: 33.3333%
     &.is-offset-one-quarter-mobile
       margin-left: 25%
+    &.is-offset-one-fifth-mobile
+      margin-left: 20%
     @for $i from 1 through 12
       &.is-#{$i}-mobile
         flex: none
@@ -107,6 +117,10 @@ $column-gap: 0.75rem !default
     &.is-one-quarter-tablet
       flex: none
       width: 25%
+    &.is-one-fifth,
+    &.is-one-fifth-tablet
+        flex: none
+        width: 20%
     &.is-offset-three-quarters,
     &.is-offset-three-quarters-tablet
       margin-left: 75%
@@ -122,6 +136,9 @@ $column-gap: 0.75rem !default
     &.is-offset-one-quarter,
     &.is-offset-one-quarter-tablet
       margin-left: 25%
+    &.is-offset-one-fifth,
+    &.is-offset-one-fifth-tablet
+      margin-left: 20%
     @for $i from 1 through 12
       &.is-#{$i},
       &.is-#{$i}-tablet
@@ -151,6 +168,9 @@ $column-gap: 0.75rem !default
     &.is-one-quarter-touch
       flex: none
       width: 25%
+    &.is-one-fifth-touch
+      flex: none
+      width: 20%
     &.is-offset-three-quarters-touch
       margin-left: 75%
     &.is-offset-two-thirds-touch
@@ -161,6 +181,8 @@ $column-gap: 0.75rem !default
       margin-left: 33.3333%
     &.is-offset-one-quarter-touch
       margin-left: 25%
+    &.is-offset-one-fifth-touch
+      margin-left: 20%
     @for $i from 1 through 12
       &.is-#{$i}-touch
         flex: none
@@ -188,6 +210,9 @@ $column-gap: 0.75rem !default
     &.is-one-quarter-desktop
       flex: none
       width: 25%
+    &.is-one-fifth-desktop
+      flex: none
+      width: 20%
     &.is-offset-three-quarters-desktop
       margin-left: 75%
     &.is-offset-two-thirds-desktop
@@ -198,6 +223,8 @@ $column-gap: 0.75rem !default
       margin-left: 33.3333%
     &.is-offset-one-quarter-desktop
       margin-left: 25%
+    &.is-offset-one-fifth-desktop
+      margin-left: 20%
     @for $i from 1 through 12
       &.is-#{$i}-desktop
         flex: none
@@ -225,6 +252,9 @@ $column-gap: 0.75rem !default
     &.is-one-quarter-widescreen
       flex: none
       width: 25%
+    &.is-one-fifth-widescreen
+      flex: none
+      width: 20%
     &.is-offset-three-quarters-widescreen
       margin-left: 75%
     &.is-offset-two-thirds-widescreen
@@ -235,6 +265,8 @@ $column-gap: 0.75rem !default
       margin-left: 33.3333%
     &.is-offset-one-quarter-widescreen
       margin-left: 25%
+    &.is-offset-one-fifth-widescreen
+      margin-left: 20%
     @for $i from 1 through 12
       &.is-#{$i}-widescreen
         flex: none
@@ -262,6 +294,9 @@ $column-gap: 0.75rem !default
     &.is-one-quarter-fullhd
       flex: none
       width: 25%
+    &.is-one-fifth-fullhd
+      flex: none
+      width: 20%
     &.is-offset-three-quarters-fullhd
       margin-left: 75%
     &.is-offset-two-thirds-fullhd
@@ -272,6 +307,8 @@ $column-gap: 0.75rem !default
       margin-left: 33.3333%
     &.is-offset-one-quarter-fullhd
       margin-left: 25%
+    &.is-offset-one-fifth-fullhd
+      margin-left: 20%
     @for $i from 1 through 12
       &.is-#{$i}-fullhd
         flex: none
