Added .is-up modifier for dropdown.

--- a/sass/components/dropdown.sass
+++ b/sass/components/dropdown.sass
@@ -25,6 +25,12 @@ $dropdown-divider-background-color: $border !default
     .dropdown-menu
       left: auto
       right: 0
+  &.is-up
+    .dropdown-menu
+      top: auto
+      bottom: 100%
+      padding-top: unset
+      padding-bottom: $dropdown-content-offset
 
 .dropdown-menu
   display: none
