--- a/sass/grid/columns.sass
+++ b/sass/grid/columns.sass
@@ -29,6 +29,15 @@ $column-gap: 0.75rem !default
   .columns.is-mobile > &.is-one-fifth
     flex: none
     width: 20%
+  .columns.is-mobile > &.is-two-fifths
+    flex: none
+    width: 40%
+  .columns.is-mobile > &.is-three-fifths
+    flex: none
+    width: 60%
+  .columns.is-mobile > &.is-four-fifths
+    flex: none
+    width: 80%
   .columns.is-mobile > &.is-offset-three-quarters
     margin-left: 75%
   .columns.is-mobile > &.is-offset-two-thirds
@@ -41,6 +50,12 @@ $column-gap: 0.75rem !default
     margin-left: 25%
   .columns.is-mobile > &.is-offset-one-fifth
     margin-left: 20%
+  .columns.is-mobile > &.is-offset-two-fifths
+    margin-left: 40%
+  .columns.is-mobile > &.is-offset-three-fifths
+    margin-left: 60%
+  .columns.is-mobile > &.is-offset-four-fifths
+    margin-left: 80%
   @for $i from 1 through 12
     .columns.is-mobile > &.is-#{$i}
       flex: none
@@ -71,6 +86,15 @@ $column-gap: 0.75rem !default
     &.is-one-fifth-mobile
       flex: none
       width: 20%
+    &.is-two-fifths-mobile
+      flex: none
+      width: 40%
+    &.is-three-fifths-mobile
+      flex: none
+      width: 60%
+    &.is-four-fifths-mobile
+      flex: none
+      width: 80%
     &.is-offset-three-quarters-mobile
       margin-left: 75%
     &.is-offset-two-thirds-mobile
@@ -83,6 +107,12 @@ $column-gap: 0.75rem !default
       margin-left: 25%
     &.is-offset-one-fifth-mobile
       margin-left: 20%
+    &.is-offset-two-fifths-mobile
+      margin-left: 40%
+    &.is-offset-three-fifths-mobile
+      margin-left: 60%
+    &.is-offset-four-fifths-mobile
+      margin-left: 80%
     @for $i from 1 through 12
       &.is-#{$i}-mobile
         flex: none
@@ -121,6 +151,18 @@ $column-gap: 0.75rem !default
     &.is-one-fifth-tablet
         flex: none
         width: 20%
+    &.is-two-fifths,
+    &.is-two-fifths-tablet
+      flex: none
+      width: 40%
+    &.is-three-fifths,
+    &.is-three-fifths-tablet
+      flex: none
+      width: 60%
+    &.is-four-fifths,
+    &.is-four-fifths-tablet
+      flex: none
+      width: 80%
     &.is-offset-three-quarters,
     &.is-offset-three-quarters-tablet
       margin-left: 75%
@@ -139,6 +181,15 @@ $column-gap: 0.75rem !default
     &.is-offset-one-fifth,
     &.is-offset-one-fifth-tablet
       margin-left: 20%
+    &.is-offset-two-fifths,
+    &.is-offset-two-fifths-tablet
+      margin-left: 40%
+    &.is-offset-three-fifths,
+    &.is-offset-three-fifths-tablet
+      margin-left: 60%
+    &.is-offset-four-fifths,
+    &.is-offset-four-fifths-tablet
+      margin-left: 80%
     @for $i from 1 through 12
       &.is-#{$i},
       &.is-#{$i}-tablet
@@ -171,6 +222,15 @@ $column-gap: 0.75rem !default
     &.is-one-fifth-touch
       flex: none
       width: 20%
+    &.is-two-fifths-touch
+      flex: none
+      width: 40%
+    &.is-three-fifths-touch
+      flex: none
+      width: 60%
+    &.is-four-fifths-touch
+      flex: none
+      width: 80%
     &.is-offset-three-quarters-touch
       margin-left: 75%
     &.is-offset-two-thirds-touch
@@ -183,6 +243,12 @@ $column-gap: 0.75rem !default
       margin-left: 25%
     &.is-offset-one-fifth-touch
       margin-left: 20%
+    &.is-offset-two-fifths-touch
+      margin-left: 40%
+    &.is-offset-three-fifths-touch
+      margin-left: 60%
+    &.is-offset-four-fifths-touch
+      margin-left: 80%
     @for $i from 1 through 12
       &.is-#{$i}-touch
         flex: none
@@ -213,6 +279,15 @@ $column-gap: 0.75rem !default
     &.is-one-fifth-desktop
       flex: none
       width: 20%
+    &.is-two-fifths-desktop
+      flex: none
+      width: 40%
+    &.is-three-fifths-desktop
+      flex: none
+      width: 60%
+    &.is-four-fifths-desktop
+      flex: none
+      width: 80%
     &.is-offset-three-quarters-desktop
       margin-left: 75%
     &.is-offset-two-thirds-desktop
@@ -225,6 +300,12 @@ $column-gap: 0.75rem !default
       margin-left: 25%
     &.is-offset-one-fifth-desktop
       margin-left: 20%
+    &.is-offset-two-fifths-desktop
+      margin-left: 40%
+    &.is-offset-three-fifths-desktop
+      margin-left: 60%
+    &.is-offset-four-fifths-desktop
+      margin-left: 80%
     @for $i from 1 through 12
       &.is-#{$i}-desktop
         flex: none
@@ -255,6 +336,15 @@ $column-gap: 0.75rem !default
     &.is-one-fifth-widescreen
       flex: none
       width: 20%
+    &.is-two-fifths-widescreen
+      flex: none
+      width: 40%
+    &.is-three-fifths-widescreen
+      flex: none
+      width: 60%
+    &.is-four-fifths-widescreen
+      flex: none
+      width: 80%
     &.is-offset-three-quarters-widescreen
       margin-left: 75%
     &.is-offset-two-thirds-widescreen
@@ -267,6 +357,12 @@ $column-gap: 0.75rem !default
       margin-left: 25%
     &.is-offset-one-fifth-widescreen
       margin-left: 20%
+    &.is-offset-two-fifths-widescreen
+      margin-left: 40%
+    &.is-offset-three-fifths-widescreen
+      margin-left: 60%
+    &.is-offset-four-fifths-widescreen
+      margin-left: 80%
     @for $i from 1 through 12
       &.is-#{$i}-widescreen
         flex: none
@@ -297,6 +393,15 @@ $column-gap: 0.75rem !default
     &.is-one-fifth-fullhd
       flex: none
       width: 20%
+    &.is-two-fifths-fullhd
+      flex: none
+      width: 40%
+    &.is-three-fifths-fullhd
+      flex: none
+      width: 60%
+    &.is-four-fifths-fullhd
+      flex: none
+      width: 80%
     &.is-offset-three-quarters-fullhd
       margin-left: 75%
     &.is-offset-two-thirds-fullhd
@@ -309,6 +414,12 @@ $column-gap: 0.75rem !default
       margin-left: 25%
     &.is-offset-one-fifth-fullhd
       margin-left: 20%
+    &.is-offset-two-fifths-fullhd
+      margin-left: 40%
+    &.is-offset-three-fifths-fullhd
+      margin-left: 60%
+    &.is-offset-four-fifths-fullhd
+      margin-left: 80%
     @for $i from 1 through 12
       &.is-#{$i}-fullhd
         flex: none
