Add dropdup to changelog

--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -5209,6 +5209,13 @@ a.tag:hover {
   right: 0;
 }
 
+.dropdown.is-up .dropdown-menu {
+  bottom: 100%;
+  padding-bottom: 4px;
+  padding-top: unset;
+  top: auto;
+}
+
 .dropdown-menu {
   display: none;
   left: 0;
