Use link instead of primary

--- a/docs/_includes/features.html
+++ b/docs/_includes/features.html
@@ -320,7 +320,7 @@
     Remember me
   </label>
   <div class="panel-block">
-    <button class="button is-primary is-outlined is-fullwidth">
+    <button class="button is-info is-outlined is-fullwidth">
       Reset all filters
     </button>
   </div>
