--- a/docs/_layouts/documentation.html
+++ b/docs/_layouts/documentation.html
@@ -7,7 +7,7 @@ route: documentation
   {% include navbar.html id="Documentation" %}
 </div>
 
-<section class="hero is-primary">
+<section class="hero is-info">
   <div class="hero-body">
     <div class="container">
       <div class="columns is-vcentered">
