--- a/sass/utilities/derived-variables.sass
+++ b/sass/utilities/derived-variables.sass
@@ -50,8 +50,8 @@ $pre-background: $background !default
 
 // Link colors
 
-$link: $primary !default
-$link-invert: $primary-invert !default
+$link: $blue !default
+$link-invert: $blue-invert !default
 $link-visited: $purple !default
 
 $link-hover: $grey-darker !default
