--- a/docs/_includes/navbar.html
+++ b/docs/_includes/navbar.html
@@ -61,7 +61,7 @@
           <div class="navbar-item">
             <div>
               <p class="is-size-6-desktop">
-                <strong class="has-text-info">{{ site.version }}</strong>
+                <strong>{{ site.version }}</strong>
               </p>
               {{#unless site.deprecated}}
                 <small>
@@ -81,7 +81,7 @@
             <a class="navbar-item" href="{{ post.url }}">
               <div class="navbar-content">
                 <p>
-                  <small class="has-text-info">{{ post.date | date_to_string }}</small>
+                  <small class="has-text-link">{{ post.date | date_to_string }}</small>
                 </p>
                 <p>{{ post.title }}</p>
               </div>
