--- a/docs/_includes/features.html
+++ b/docs/_includes/features.html
@@ -41,7 +41,7 @@
 </div>
 <div class="field">
   <p class="control">
-    <a class="button is-primary">Button</a>
+    <a class="button is-link">Button</a>
   </p>
 </div>
 {% endcapture %}
