--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -1329,7 +1329,7 @@ a.box:active {
 }
 
 .button:focus, .button.is-focused {
-  border-color: #00d1b2;
+  border-color: #3273dc;
   color: #363636;
 }
 
@@ -7473,7 +7473,7 @@ a.navbar-item:hover, a.navbar-item.is-active,
 .pagination-previous:focus,
 .pagination-next:focus,
 .pagination-link:focus {
-  border-color: #00d1b2;
+  border-color: #3273dc;
 }
 
 .pagination-previous:active,
@@ -12246,12 +12246,12 @@ html.route-index .title.is-2 {
 }
 
 html.route-index .title.is-2 a {
-  color: #242424;
+  color: #363636;
   position: relative;
 }
 
 html.route-index .title.is-2 a:hover {
-  color: #00d1b2;
+  color: #3273dc;
 }
 
 html.route-index .title.is-2 .icon.is-medium {
