--- a/sass/utilities/derived-variables.sass
+++ b/sass/utilities/derived-variables.sass
@@ -59,7 +59,7 @@ $link-hover: $grey-darker !default
 $link-hover-border: $grey-light !default
 
 $link-focus: $grey-darker !default
-$link-focus-border: $primary !default
+$link-focus-border: $blue !default
 
 $link-active: $grey-darker !default
 $link-active-border: $grey-dark !default
