--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -5306,6 +5306,10 @@ a.dropdown-item.is-active {
   margin-top: 0;
 }
 
+.level.is-mobile .level-item {
+  margin-right: 0.75rem;
+}
+
 .level.is-mobile .level-item:not(:last-child) {
   margin-bottom: 0;
 }
@@ -11960,7 +11964,9 @@ html.route-index .hero.is-primary a.column:hover .title strong {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  display: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   margin-top: 8.4px;
 }
 
