--- a/docs/_includes/tw.html
+++ b/docs/_includes/tw.html
@@ -4,7 +4,7 @@
   <header class="bd-tw-header">
     <a class="bd-tw-author" href="{{ twUrl }}" target="_blank">
       <figure class="bd-tw-avatar">
-        <img class="b-lazy" src="{{ include.tweet.avatar }}">
+        <img class="lazyload" src="{{ include.tweet.avatar }}">
       </figure>
       <div class="bd-tw-name">
         <strong class="bd-tw-fullname">
