--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -12203,7 +12203,7 @@ html.route-index .hero.is-primary a.column:hover .title strong {
     margin-top: 3rem;
     width: calc(50% - 3rem);
   }
-  .bd-website:nth-child(1) {
+  .bd-website:nth-child(1), .bd-website:nth-child(2) {
     margin-top: 0;
   }
   .bd-website.bd-is-highlighted {
