--- a/docs/documentation/components/dropdown.html
+++ b/docs/documentation/components/dropdown.html
@@ -193,7 +193,7 @@ variables:
 {% endcapture %}
 
 {% capture dropdown_up_example %}
-<div class="dropdown is-up is-active">
+<div class="dropdown is-up">
   <div class="dropdown-trigger">
     <button class="button is-info" aria-haspopup="true" aria-controls="dropdown-menu7">
       <span>Dropup button</span>
@@ -351,6 +351,8 @@ variables:
 
     {% include anchor.html name="Dropup" %}
 
+    {% include elements/new-tag.html version="0.5.4" %}
+
     <div class="content">
       <p>
         You can add the <code>is-up</code> modifier to have a dropdown menu that appears above the dropdown button.
@@ -358,8 +360,8 @@ variables:
     </div>
 
     <div class="columns">
-      <div class="column is-half" style="display: flex; align-items: flex-end;">
-        {{dropdown_up_example}}
+      <div class="column is-half">
+        {{ dropdown_up_example }}
       </div>
       <div class="column is-half">
         {% highlight html %}{{dropdown_up_example}}{% endhighlight %}
