--- a/sass/components/modal.sass
+++ b/sass/components/modal.sass
@@ -7,6 +7,9 @@ $modal-content-margin-mobile: 20px !default
 $modal-content-spacing-mobile: 160px !default
 $modal-content-spacing-tablet: 40px !default
 
+$modal-content-width-small: 340px !default
+$modal-content-width-large: 960px !default
+
 $modal-close-dimensions: 40px !default
 $modal-close-right: 20px !default
 $modal-close-top: 20px !default
@@ -56,6 +59,10 @@ $modal-card-body-padding: 20px !default
     margin: 0 auto
     max-height: calc(100vh - #{$modal-content-spacing-tablet})
     width: $modal-content-width
+  &.is-small
+    width: $modal-content-width-small
+  &.is-large
+    width: $modal-content-width-large
 
 .modal-close
   +delete
