--- a/docs/documentation/layout/hero.html
+++ b/docs/documentation/layout/hero.html
@@ -650,27 +650,7 @@ doc-subtab: hero
 {% endcapture %}
 
 <section class="section is-fullwidth">
-  <div class="bd-example">
-    {{ heroNavbarA }}
-  </div>
-
-  <div class="bd-highlight-clipped">
-    {% highlight html %}{{ heroNavbarA }}{% endhighlight %}
-  </div>
-
-  <div class="bd-example">
-    {{ heroNavbarB }}
-  </div>
-
-  <div class="bd-highlight-clipped">
-    {% highlight html %}{{ heroNavbarB }}{% endhighlight %}
-  </div>
-
-  <div class="bd-example">
-    {{ heroNavbarC }}
-  </div>
-
-  <div class="bd-highlight-clipped">
-    {% highlight html %}{{ heroNavbarC }}{% endhighlight %}
-  </div>
+  {% include snippet.html content=heroNavbarA horizontal=true more=true %}
+  {% include snippet.html content=heroNavbarB horizontal=true more=true %}
+  {% include snippet.html content=heroNavbarC horizontal=true more=true %}
 </section>
