Add variables data

--- a/docs/_sass/override.sass
+++ b/docs/_sass/override.sass
@@ -8,6 +8,11 @@
       top: 100%
       width: 100%
 
+.content
+  .highlighter-rouge
+    &:not(:last-child)
+      margin-bottom: 1.5rem
+
 body.page-grid .column > .notification
   padding-left: 0
   padding-right: 0
