--- a/docs/documentation/components/panel.html
+++ b/docs/documentation/components/panel.html
@@ -104,7 +104,7 @@ variables:
     remember me
   </label>
   <div class="panel-block">
-    <button class="button is-primary is-outlined is-fullwidth">
+    <button class="button is-link is-outlined is-fullwidth">
       reset all filters
     </button>
   </div>
