fix typo for modal section

--- a/docs/documentation/components/modal.html
+++ b/docs/documentation/components/modal.html
@@ -182,7 +182,7 @@ variables:
       <p>Modal comes in three different sizes <code>is-small</code>, <code>is-large</code> and the <strong>default</strong> size.
       </p>
 
-      <p>Override the default size by adding the class to <code>.modal-content</code> or <code>.modal-modal-card</code>
+      <p>Override the default size by adding the class to <code>.modal-content</code> or <code>.modal-card</code>
       </p>
 
       <p>
