Add link changelog

--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -4869,7 +4869,7 @@ a.tag:hover {
 
 .breadcrumb a {
   align-items: center;
-  color: #7a7a7a;
+  color: #3273dc;
   display: flex;
   justify-content: center;
   padding: 0.5em 0.75em;
