--- a/docs/documentation/components/dropdown.html
+++ b/docs/documentation/components/dropdown.html
@@ -65,7 +65,7 @@ variables:
 {% capture dropdown_content_example %}
 <div class="dropdown is-active">
   <div class="dropdown-trigger">
-    <button class="button is-info" aria-haspopup="true" aria-controls="dropdown-menu2">
+    <button class="button" aria-haspopup="true" aria-controls="dropdown-menu2">
       <span>Content</span>
       <span class="icon is-small">
         <i class="fa fa-angle-down" aria-hidden="true"></i>
@@ -93,7 +93,7 @@ variables:
 {% capture dropdown_click_example %}
 <div class="dropdown">
   <div class="dropdown-trigger">
-    <button class="button is-primary" aria-haspopup="true" aria-controls="dropdown-menu3">
+    <button class="button" aria-haspopup="true" aria-controls="dropdown-menu3">
       <span>Click me</span>
       <span class="icon is-small">
         <i class="fa fa-angle-down" aria-hidden="true"></i>
@@ -135,7 +135,7 @@ variables:
 {% capture dropdown_info_example %}
 <div class="dropdown is-hoverable">
   <div class="dropdown-trigger">
-    <button class="button is-info" aria-haspopup="true" aria-controls="dropdown-menu4">
+    <button class="button" aria-haspopup="true" aria-controls="dropdown-menu4">
       <span>Hover me</span>
       <span class="icon is-small">
         <i class="fa fa-angle-down" aria-hidden="true"></i>
@@ -155,7 +155,7 @@ variables:
 {% capture dropdown_left_example %}
 <div class="dropdown is-active">
   <div class="dropdown-trigger">
-    <button class="button is-info" aria-haspopup="true" aria-controls="dropdown-menu5">
+    <button class="button" aria-haspopup="true" aria-controls="dropdown-menu5">
       <span>Left aligned</span>
       <span class="icon is-small">
         <i class="fa fa-angle-down" aria-hidden="true"></i>
@@ -175,7 +175,7 @@ variables:
 {% capture dropdown_right_example %}
 <div class="dropdown is-right is-active">
   <div class="dropdown-trigger">
-    <button class="button is-info" aria-haspopup="true" aria-controls="dropdown-menu6">
+    <button class="button" aria-haspopup="true" aria-controls="dropdown-menu6">
       <span>Right aligned</span>
       <span class="icon is-small">
         <i class="fa fa-angle-down" aria-hidden="true"></i>
@@ -195,7 +195,7 @@ variables:
 {% capture dropdown_up_example %}
 <div class="dropdown is-up">
   <div class="dropdown-trigger">
-    <button class="button is-info" aria-haspopup="true" aria-controls="dropdown-menu7">
+    <button class="button" aria-haspopup="true" aria-controls="dropdown-menu7">
       <span>Dropup button</span>
       <span class="icon is-small">
         <i class="fa fa-angle-up" aria-hidden="true"></i>
