--- a/docs/documentation/components/navbar.html
+++ b/docs/documentation/components/navbar.html
@@ -1018,6 +1018,7 @@ document.addEventListener('DOMContentLoaded', function () {
       </p>
       <ul>
         <li><code>is-primary</code></li>
+        <li><code>is-link</code></li>
         <li><code>is-info</code></li>
         <li><code>is-success</code></li>
         <li><code>is-warning</code></li>
@@ -1033,6 +1034,10 @@ document.addEventListener('DOMContentLoaded', function () {
 
     <div class="bd-example is-paddingless">
       {% include examples/navbar-color.html color="primary" %}
+    </div>
+
+    <div class="bd-example is-paddingless">
+      {% include examples/navbar-color.html color="link" %}
     </div>
 
     <div class="bd-example is-paddingless">
