--- a/docs/_includes/index/intro.html
+++ b/docs/_includes/index/intro.html
@@ -36,8 +36,10 @@
 
         <div class="intro-column is-video">
           <div class="intro-video">
+            <div class="intro-shadow"></div>
+            <div class="intro-spinner"></div>
             <div class="intro-iframe">
-              <iframe src="https://player.vimeo.com/video/232485795?color=00d1b2" width="640" height="338" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+              <iframe id="introVimeo" src="https://player.vimeo.com/video/232485795?color=00d1b2" width="640" height="338" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
             </div>
           </div>
         </div>
