Add vimeo placeholder

--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -148,3 +148,5 @@
   ga('create', 'UA-82634666-2', 'auto');
   ga('send', 'pageview');
 </script>
+
+<script type="text/javascript" defer="defer" src="https://extend.vimeocdn.com/ga/72160148.js"></script>
