--- a/docs/_sass/index.sass
+++ b/docs/_sass/index.sass
@@ -1,7 +1,7 @@
 .intro-content
   margin-left: auto
   margin-right: auto
-  max-width: 440px
+  max-width: 640px
 
 .intro-title
   font-weight: $weight-normal
@@ -107,6 +107,11 @@
 
 .intro-shadow
   +overlay
+  background-color: #43647b
+  background-image: url("/images/index/vimeo-placeholder.jpg")
+  background-position: center center
+  background-repeat: no-repeat
+  background-size: cover
   box-shadow: 0 1.5rem 3rem rgba(#000, 0.2)
   animation-name: introShadow
 
@@ -142,7 +147,7 @@
 +touch
   .intro-column.is-video,
   .intro-carbon
-    margin-top: 1.5rem
+    margin-top: 3rem
 
 +desktop
   .intro-columns
@@ -154,6 +159,8 @@
       margin-right: 1.5rem
     &.is-video
       margin-left: 1.5rem
+  .intro-content
+    max-width: 440px
   .intro-title
     margin-top: -11px
     &:not(:last-child)
