--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -9454,7 +9454,7 @@ svg {
 .intro-content {
   margin-left: auto;
   margin-right: auto;
-  max-width: 440px;
+  max-width: 640px;
 }
 
 .intro-title {
@@ -9615,6 +9615,11 @@ svg {
   position: absolute;
   right: 0;
   top: 0;
+  background-color: #43647b;
+  background-image: url("/images/index/vimeo-placeholder.jpg");
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
   box-shadow: 0 1.5rem 3rem rgba(0, 0, 0, 0.2);
   animation-name: introShadow;
 }
@@ -9659,7 +9664,7 @@ svg {
 @media screen and (max-width: 1023px) {
   .intro-column.is-video,
   .intro-carbon {
-    margin-top: 1.5rem;
+    margin-top: 3rem;
   }
 }
 
@@ -9676,6 +9681,9 @@ svg {
   }
   .intro-column.is-video {
     margin-left: 1.5rem;
+  }
+  .intro-content {
+    max-width: 440px;
   }
   .intro-title {
     margin-top: -11px;
