Add grid and message

--- a/docs/_sass/index.sass
+++ b/docs/_sass/index.sass
@@ -167,3 +167,15 @@
       margin-bottom: 20px
   .intro-carbon
     margin-top: 3rem
+
+#grid
+  .notification
+    padding-left: 0
+    padding-right: 0
+
+#message
+  display: none
+
+#markup
+  .highlight pre
+    max-height: none
