--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -9696,6 +9696,19 @@ svg {
   }
 }
 
+#grid .notification {
+  padding-left: 0;
+  padding-right: 0;
+}
+
+#message {
+  display: none;
+}
+
+#markup .highlight pre {
+  max-height: none;
+}
+
 #github {
   color: #333333;
   border-color: #333333;
