--- a/docs/_includes/bp/desktop.html
+++ b/docs/_includes/bp/desktop.html
@@ -1,1 +1,1 @@
-<span class="tag">>= {{ site.data.breakpoints[2].value }}px</span>
+<span class="tag">>= {{ site.data.breakpoints.desktop.from }}px</span>
