--- a/docs/_includes/bp/fullhd.html
+++ b/docs/_includes/bp/fullhd.html
@@ -1,1 +1,1 @@
-<span class="tag">>= {{ site.data.breakpoints[4].value }}px</span>
+<span class="tag">>= {{ site.data.breakpoints.fullhd.from }}px</span>
