--- a/docs/_includes/bp/widescreen.html
+++ b/docs/_includes/bp/widescreen.html
@@ -1,1 +1,1 @@
-<span class="tag">>= {{ site.data.breakpoints[3].value }}px</span>
+<span class="tag">>= {{ site.data.breakpoints.widescreen.from }}px</span>
