Add intro video

--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -111,6 +111,7 @@
 <script src="{{ site.url }}/lib/main.js"></script>
 
 {% if page.route == 'index' %}
+  <script src="https://player.vimeo.com/api/player.js"></script>
   <script type="text/javascript" src="{{ site.url }}/lib/index.js"></script>
 {% endif %}
 
