--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -150,4 +150,6 @@
   ga('send', 'pageview');
 </script>
 
-<script type="text/javascript" defer="defer" src="https://extend.vimeocdn.com/ga/72160148.js"></script>
+{% if page.route == 'index' %}
+  <script type="text/javascript" defer="defer" src="https://extend.vimeocdn.com/ga/72160148.js"></script>
+{% endif %}
