Add Bulma badges

--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -97,13 +97,22 @@
       </div>
     </div>
 
-    <p id="tsp">
-      <small>
-        Source code licensed <a href="http://opensource.org/licenses/mit-license.php">MIT</a>.
-        <br>
-        Website content licensed <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA 4.0</a>.
-      </small>
-    </p>
+    <div class="columns">
+      <div class="column is-3">
+        <p id="tsp">
+          <a href="{{ site.url }}/made-with-bulma/">
+            <img src="{{ site.url }}/images/made-with-bulma.png" alt="Made with Bulma" width="128" height="24">
+          </a>
+          <small>
+            Get the <a href="{{ site.url }}/made-with-bulma/">badge</a>!
+            <br>
+            Source code licensed <a href="http://opensource.org/licenses/mit-license.php">MIT</a>.
+            <br>
+            Website content licensed <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA 4.0</a>.
+          </small>
+        </p>
+      </div>
+    </div>
   </div>
 </footer>
 
