--- a/docs/_includes/navbar.html
+++ b/docs/_includes/navbar.html
@@ -119,25 +119,19 @@
           More
         </div>
         <div id="moreDropdown" class="navbar-dropdown {% if include.boxed %}is-boxed{% endif %}">
+          <a class="navbar-item {% if page.route == 'made-with-bulma' %}is-active{% endif %}" href="{{ site.url }}/made-with-bulma/">
+            <p>
+              <strong>Made with Bulma</strong>
+              <br>
+              <small>The official community badge</small>
+            </p>
+          </a>
           <a class="navbar-item {% if page.route == 'extensions' %}is-active{% endif %}" href="{{ site.url }}/extensions/">
-            <div class="level is-mobile">
-              <div class="level-left">
-                <div class="level-item">
-                  <p>
-                    <strong>Extensions</strong>
-                    <br>
-                    <small>Side projects to enhance Bulma</small>
-                  </p>
-                </div>
-              </div>
-              <div class="level-right">
-                <div class="level-item">
-                  <span class="icon has-text-info">
-                    <i class="fa fa-plug"></i>
-                  </span>
-                </div>
-              </div>
-            </div>
+            <p>
+              <strong>Extensions</strong>
+              <br>
+              <small>Side projects to enhance Bulma</small>
+            </p>
           </a>
         </div>
       </div>
