Change MwB images

--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -11294,6 +11294,14 @@ svg {
   background-color: #ffdd57;
 }
 
+.bd-mwb-table td {
+  vertical-align: middle;
+}
+
+.bd-mwb-table td img {
+  vertical-align: middle;
+}
+
 .bd-example,
 .bd-structure,
 .bd-snippet {
