Link to versions subdomain

--- a/docs/_includes/navbar.html
+++ b/docs/_includes/navbar.html
@@ -65,7 +65,7 @@
               </p>
               {{#unless site.deprecated}}
                 <small>
-                  <a class="bd-view-all-versions" href="/versions">View all versions</a>
+                  <a class="bd-view-all-versions" href="http://versions.bulma.io/">View all versions</a>
                 </small>
               {{/unless}}
             </div>
